# CRYPTA

./: .gitattributes  .gitignore  README.md  TODO.md
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs
docs/: api.md  architecture.md  hardware_security.md  security.md
extension/: background.js  content.js  crypto.js  manifest.json  popup.html  popup.js
landing/: index.html
